[package]
edition = "2021"
name = "lapce-dart"
version = "0.1.0"
resolver = "2"

[target.'cfg(target_os = "wasi")'.dependencies]

# default deps for all lapce plugins
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lapce-plugin = { git = "https://github.com/lapce/lapce-plugin-rust.git"}

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
